Fixed line height on mobile

--- a/src/components/LearnMoreDetailSection/LearnMoreDetailSection.css
+++ b/src/components/LearnMoreDetailSection/LearnMoreDetailSection.css
@@ -126,6 +126,7 @@
   .learn-more-detail-section-body {
     text-align: center;
     margin-bottom: 40px;
+    line-height: 1.2;
   }
 
   .learn-more-detail-section-image-container {
